--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,16 +3,26 @@
 }
 
 body {
-    background: url('../images/gravel.png');
+    background: url('../images/nordwood-themes-524102-unsplash.jpg');
     font-size: 18px;
     line-height: 34px;
-    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+    font-family: "Roboto", sans-serif;
     color: #777;
     height: 100%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 
 html {
     height: 100%;
+}
+
+#main-container{
+    opacity: 0.8;
 }
 
 .container {
@@ -32,9 +42,8 @@ p:last-child {
 }
 
 h1, h2, h3 {
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    font-weight: bold;
-    color: #4aaaa5; 
+    font-family: "Roboto", sans-serif;
+    color: black; 
 }
 
 h1 {
@@ -42,6 +51,7 @@ h1 {
     line-height: 49px;
     border-bottom: 3px solid #dddddd;
     padding-bottom: 20px;
+    font: black;
 }
 
 h2, h3 {
@@ -61,12 +71,12 @@ h2, h3 {
 #logo {
     width: 250px;
     height: 90px;
-    background: #4aaaa5;
+    background: rgb(235, 235, 235);
     float: left;
-    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-family: "Roboto", sans-serif;
     text-align: center;
     line-height: 90px;
-    color: #fff;
+    color: black;
     font-weight: 700;
     font-size: 30px;
     text-decoration: none;
@@ -108,12 +118,11 @@ nav a:first-child {
 }
 
 footer {
-    background: #666;
-    color: #fff;
+    background: white;
     padding: 30px 0;
     clear: both;
-    border-top: 8px solid #4aaaa5;
-    color: #777777;
+    border-top: 4px solid gray;
+    color: black;
     font-size: 12px;
     text-align: center;
     bottom: 0;
@@ -141,8 +150,8 @@ footer {
 
 .work h3 {
     border-bottom: 0;
-    background: #4aaaa5;
-    color: #fff;
+    background: rgb(235, 235, 235);
+    color: black;
     text-align: center;
     bottom: 1px;
     position: absolute;
@@ -150,6 +159,7 @@ footer {
     padding: 15px;
     width: 100%;
     line-height: 30px;
+    opacity: .7;
 }
 
 /* contact page */
@@ -184,7 +194,7 @@ textarea {
 }
 
 input[type=submit] {
-    background: #4aaaa5;
+    background: rgb(235, 235, 235);
     border: 0 none;
     color: #ffffff;
     font-size: 18px;
@@ -226,9 +236,9 @@ input[type=submit] {
     #logo {
         width: 100%;
         height: 90px;
-        background: #4aaaa5;
+        background: rgb(235, 235, 235);
         float: left;
-        font-family: 'Georgia', Times, Times New Roman, serif;
+        font-family: "Roboto", sans-serif;
         text-align: center;
         line-height: 90px;
         color: #fff;
